--- a/frontend/components/reports/reportsStyle.styl
+++ b/frontend/components/reports/reportsStyle.styl
@@ -114,6 +114,38 @@
                 color main-blue
                 display inline-block
                 font-family "FontAwesome"
+    .history-item
+        margin-top 2%
+        margin-bottom  2%
+        border-radius 5px
+        box-shadow 0px 2px 3px 2px  border-grey
+        padding 1%
+        border 2px solid main-blue
+        text-indent 1%
+        word-break break-all
+        .his-head
+            line-height 40px
+            vertical-align middle
+            border-bottom 1px solid border-grey
+            font-size 20px
+            font-family "Montserrat"
+            background-color  #d8d8d8
+            padding 1%
+            div
+                border-left 1px solid white
+
+
+        .his-body
+            padding 1%
+            font-size 18px
+            background white
+            line-height 30px
+            vertical-align middle
+            font-family "Open Sans"
+            div
+                border-left 1px solid #d8d8d8
+
+
     .button
         button()
     .btn
@@ -129,3 +161,5 @@
         font-size 25px
         div
             padding 2%
+
+
