--- a/frontend/components/reports/reportEdit.template.pug
+++ b/frontend/components/reports/reportEdit.template.pug
@@ -20,22 +20,22 @@
                             .row.generate-item-header.middle-xs
                                 .col-xs-2 Type:
                                 .col-xs-9.generate-item-holder
-                                    .generate-item(ng-click='reportEdit.gui.manageItem($index, reportEdit.types, reportEdit.typeSamples)' ng-repeat = 't in reportEdit.types track by $index') {{t}}
+                                    .generate-item(ng-click='reportEdit.gui.manageItem($index, reportEdit.types, reportEdit.typeSamples, "type")' ng-repeat = 't in reportEdit.types track by $index') {{t}}
                                         span &#xf068
                                 .col-xs-1.fa.button.f-btn(ng-class = '{"fa-angle-left": !reportEdit.gui.isTypePanel, "fa-angle-down": reportEdit.gui.isTypePanel}' ng-click='reportEdit.gui.manageTypePanel()')
                             .row
                                 .col-xs-12.generate-item-holder(ng-show='reportEdit.gui.isTypePanel')
-                                    span.generate-item(ng-click='reportEdit.gui.manageItem($index, reportEdit.typeSamples, reportEdit.types)' ng-repeat = 't in reportEdit.typeSamples track by $index') {{t}}
+                                    span.generate-item(ng-click='reportEdit.gui.manageItem($index, reportEdit.typeSamples, reportEdit.types, "type")' ng-repeat = 't in reportEdit.typeSamples track by $index') {{t}}
                                         span &#xf067
                             .row.generate-item-header.middle-xs
                                 .col-xs-2 User:
                                 .col-xs-9.generate-item-holder
-                                    span.generate-item(ng-click='reportEdit.gui.manageItem($index, reportEdit.users, reportEdit.userSamples)' ng-repeat = 'u in reportEdit.users track by $index') {{u}}
+                                    span.generate-item(ng-click='reportEdit.gui.manageItem($index, reportEdit.users, reportEdit.userSamples, "user")' ng-repeat = 'u in reportEdit.users track by $index') {{u}}
                                         span &#xf068
                                 .col-xs-1.fa.button.f-btn(ng-class = '{"fa-angle-left": !reportEdit.gui.isUserPanel, "fa-angle-down": reportEdit.gui.isUserPanel}' ng-click='reportEdit.gui.manageUserPanel()')
                             .row
                                 .col-xs-12.generate-item-holder(ng-show='reportEdit.gui.isUserPanel')
-                                    span.generate-item.middle-xs(ng-click='reportEdit.gui.manageItem($index, reportEdit.userSamples, reportEdit.users)' ng-repeat = 'u in reportEdit.userSamples track by $index') {{u}}
+                                    span.generate-item.middle-xs(ng-click='reportEdit.gui.manageItem($index, reportEdit.userSamples, reportEdit.users, "user")' ng-repeat = 'u in reportEdit.userSamples track by $index') {{u}}
                                         span &#xf067
                             .row.generate-item-header.middle-xs
                                 .col-xs-2 Date:
@@ -45,9 +45,11 @@
                                 input(type="date" ng-model='reportEdit.dateRange[1]').col-xs-3
                     .row
                         span.button.btn.col-xs-4.col-xs-offset-4(ng-click='reportEdit.reportGenerate()') Generate
-                    .row.start-xs(ng-show='reportAdd.isGenerated')
+                    .row.start-xs(ng-show='reportEdit.isGenerated')
                         span.chapter-title.col-xs-10 History
                             .fa.fa-history
+                        span.chapter-title.col-xs-1.end-xs Total:
+                        span.chapter-title.col-xs-1.end-xs {{reportEdit.history.length}}
                         .col-xs-12
                             .row.history-item(ng-repeat='h in reportEdit.history track by $index')
                                 .col-xs-12
@@ -56,7 +58,6 @@
                                             .row.his-head
                                                 .col-xs-3 Type
                                                 .col-xs-4 Title
-                                                //.col-xs-4(ng-show='h._type!="question"') {{h._type=="event"?'Start Date':'Date'}}
                                                 .col-xs-4(ng-show='h._type=="checkin"') Question
                                                 .col-xs-4(ng-show='(h._type!="checkin" && h._type!="event")') Author
                                                 .col-xs-4(ng-show='h._type=="event"')
@@ -66,10 +67,6 @@
                                                 .col-xs-4 {{h.title}}
                                                 .col-xs-5(ng-show='h._type=="checkin"') {{h.question}}
                                                 .col-xs-5(ng-show='h._type!="checkin"') {{(h.author.firstName?h.author.firstName:"")+(h.author.secondName?h.author.secondName:"")}}
-                                                //.col-xs-4(ng-show="h._type=='message'") {{h.date | date: 'dd/MM/y'}}
-                                                //.col-xs-4(ng-show="h._type=='event'") {{h.startDate | date: 'dd/MM/y'}}
-                                                //.col-xs-4(ng-show="h._type=='task'") {{h.dateCreated | date: 'dd/MM/y'}}
-                                                //.col-xs-6(ng-show="h._type=='checkin'") {{h.question}}
                                     .row
                                         .col-xs-12
                                             .row.his-head
@@ -90,6 +87,3 @@
                                                 .col-xs-3(ng-show="h._type=='checkin'") {{h.time}}
                                                 .col-xs-3(ng-show="h._type=='checkin'") {{h.frequency}}
                                                 .col-xs-6(ng-show="h._type!='message'") {{h._type!='message'?reportEdit.gui.arrayToString(h.participants):""}}
-
-
-
