--- a/frontend/components/checkins/checkinsCreateStyles.styl
+++ b/frontend/components/checkins/checkinsCreateStyles.styl
@@ -1,3 +1,4 @@
+@import "../../../public/libs/css/generalComponentsStyle.styl"
 .checkins-setup-wrapper
 
     .checkins-setup
@@ -5,7 +6,7 @@
         flex-flow row wrap
         justify-content center
         max-width 650px
-        height 650px
+        height 700px
         text-align center
         margin 0 auto
         background-color #f5f5f5
@@ -23,18 +24,31 @@
         list-style none
 
     .header-setup
-        height 20%
+        height 22%
         h3
             margin 0
 
     .close-btn
-        text-align right
-        margin-top 5px
-        margin-right 10px
+        display flex
+        justify-content flex-end
+        margin 10px
 
-    .fa-times
+    .button
+        box-shadow 0px 0px 10px 0px grey
+        background-color main-blue
+        color white
+        border-radius 5px
+        height 40px
+        width 50px
+        padding 5px
+        margin 5px
+        transition 0.2s
+        cursor pointer
+        border none
         &:hover
-            color #f20000
+            box-shadow 0px 0px 0px 1px white, 0px 0px 0px 4px main-blue
+        &:active
+            box-shadow 0px 0px 0px 0.5px white, 0px 0px 0px 2px main-blue, 0px 0px 5px 0px white inset
 
     input
         &.question
@@ -95,8 +109,6 @@
             margin-left 30px
             cursor pointer
             padding 1%
-        span
-
 
     .checkbox
         input
@@ -108,9 +120,7 @@
         margin-right 30px
 
     .footer-setup
-        height 20%
-        //h3
-        //    height 20%
+        height 18%
         .save-button
             margin 0px
             height 40px
