--- a/frontend/components/checkins/checkinsInfoStyles.styl
+++ b/frontend/components/checkins/checkinsInfoStyles.styl
@@ -22,10 +22,11 @@
 
     .header-answer
         height 20%
+        max-width 650px
         h2
-            margin 0
-        .fa
-            margin-left 10px
+            word-wrap break-word
+            margin 15px
+            text-align center
 
     .header-btn
         display flex
