--- a/frontend/components/checkins/checkinsStyles.styl
+++ b/frontend/components/checkins/checkinsStyles.styl
@@ -152,6 +152,7 @@
 
         .question
             margin-right 25px
+            word-wrap break-word
 
         .user-list
             text-align center
