--- a/frontend/components/rightPanel/panel-pug.component.pug
+++ b/frontend/components/rightPanel/panel-pug.component.pug
@@ -1,7 +1,7 @@
 
 a(href="", ng-click="rpanel.previousDay()")
     p previous
-div(ng-repeat="obj in rpanel.dailyCheckinsList ") 
+div#chlist(ng-repeat="obj in rpanel.dailyCheckinsList ") 
     ul.checkinsList(ng-repeat="checkin in obj.checkins") <h2 class="checkin_title">{{checkin.question}}</h2>
         li(ng-repeat="answer in checkin.answers | filter: rpanel.checkinFilter(obj.day)") 
              .answer <span class="user_name">{{answer.user.firstName + ' '+ answer.user.lastName }} (<span class="creation_date">{{answer.creationDate | date: "HH:mm"}}</span>)</span>  <span class="answer_text" ng-bind-html='answer.answer'></span>             
