--- a/frontend/directives/fileUpload/fileUpload.styl
+++ b/frontend/directives/fileUpload/fileUpload.styl
@@ -33,6 +33,10 @@
 			left 0
 			top 0
 			z-index 0
+		&:disabled
+			&:hover
+				box-shadow none
+				cursor wait
 	.buttonDownload
 		padding 0 30%
 		height 25px
