--- a/frontend/components/tasks/tasksStyles.styl
+++ b/frontend/components/tasks/tasksStyles.styl
@@ -2,6 +2,8 @@
 .task-wrapper
 	.main-container
 		min-width 400px
+		@media only screen and (max-width : 1000px)
+			min-width 100vw
 		main-component()
 		.wrapper_lable
 			display flex
@@ -92,7 +94,7 @@
 					align-items center
 					justify-content flex-start
 					i
-						font-size 24px
+						font-size 1.6em
 						cursor pointer
 						margin-left 50%
 				.task_progress
@@ -189,6 +191,8 @@
 				display flex
 				align-items center
 				color #808080
+				@media only screen and (max-width : 1000px)
+					width 100%
 			.icon_bar
 				font-size 1.7em
 				i
