--- a/frontend/components/project/project.component.styl
+++ b/frontend/components/project/project.component.styl
@@ -122,6 +122,22 @@
           a
             cursor pointer
             color black
+        .addButton
+          button()
+          margin 25px auto
+          font-size 1.2em
+          padding 0 0.5em
+          display flex
+          flex-wrap nowrap
+          justify-content space-between
+          i
+            display inline
+            font-size 1.2em
+            span
+              display: -moz-inline-stack;
+              display inline
+              font-family "Montserrat"
+              font-family 1em
             
           
       .last:after
