--- a/frontend/components/rightPanel/panel-pug.component.pug
+++ b/frontend/components/rightPanel/panel-pug.component.pug
@@ -1,6 +1,6 @@
 
-a(href="", ng-click="rpanel.previousDay()")
-    p previous
+//- a(href="", ng-click="rpanel.previousDay()")
+//-     p previous
 div#chlist(ng-repeat="obj in rpanel.dailyCheckinsList ") 
     ul.checkinsList(ng-repeat="checkin in obj.checkins") <h2 class="checkin_title">{{checkin.question}}</h2>
         li(ng-repeat="answer in checkin.answers | filter: rpanel.checkinFilter(obj.day)") 
@@ -10,8 +10,8 @@ div#chlist(ng-repeat="obj in rpanel.dailyCheckinsList ")
 
 
 
-a(href="", ng-click="rpanel.nextDay()")
-    p next
+//- a(href="", ng-click="rpanel.nextDay()")
+//-     p next
 
 
 
