menu interface update, select project update Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/frontend/components/header/headerStyles.styl
+++ b/frontend/components/header/headerStyles.styl
@@ -67,3 +67,9 @@
                     select:focus, select:active
                         border 0
                         outline 0
+@media only screen  and (max-width : 1000px), screen and (max-device-width : 1000px)
+    #BSheaderLogo
+        opacity 0
+    #searchBar
+        width 120px
+        
