--- a/frontend/directives/userList/userList.styl
+++ b/frontend/directives/userList/userList.styl
@@ -22,8 +22,7 @@
 	.field_description
 		font-family "Montserrat"
 		font-size 1.3em
-		color white
-		background-color #22313F
+		color #22313F
 	.user_list
 		align-items flex-start
 		justify-content center
