--- a/public/libs/css/generalComponentsStyle.styl
+++ b/public/libs/css/generalComponentsStyle.styl
@@ -28,5 +28,6 @@ main-component()
     padding 1em
     // border 1px solid border-grey
     border-radius 10px
-    background-color #F5F5F5 
-    box-shadow 0px 5px 20px 2px  shadow-grey
+    background-color #F5F5F5
+    :not(i)
+        font-family "Montserrat"
