--- a/frontend/components/menu/menu-pug.component.pug
+++ b/frontend/components/menu/menu-pug.component.pug
@@ -5,34 +5,47 @@ aside.side-menu-wrapper
     nav#side-menu.side-menu(ng-disabled="MenuCtrl.disabled")
         ul
             li
-                a(ng-link='["MainPage"]',ng-disabled="MenuCtrl.disabled", ng-click="MenuCtrl.showMenu()")
+                a(ng-link='["MainPage"]',ng-if="MenuCtrl.disabled", ng-click="MenuCtrl.showMenu()")
                     i.fa.fa-home.fa-2x
                     span.nav-text Home
             li
-                a(ng-link='["MsgBoard"]',ng-disabled="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu()")
+                a(ng-link='["MsgBoard"]',ng-if="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu()")
                     i.fa.fa-television.fa-2x
                     span.nav-text Message Board
             li
-                a(ng-link='["Checkins"]',ng-disabled="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu()")
+                a(ng-link='["Checkins"]',ng-if="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu()")
                     i.fa.fa-calendar-check-o.fa-2x
                     span.nav-text Check-ins
             li
-                a(ng-link='["Tasks"]',ng-disabled="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu()")
+                a(ng-if="MenuCtrl.disabled", ng-link='["Tasks"]', ng-click="MenuCtrl.showMenu()")
                     i.fa.fa-tasks.fa-2x
                     span.nav-text Tasks
             li
-                a(ng-link='["Events"]',ng-disabled="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu()")
+                a(ng-link='["Events"]',ng-if="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu()")
                     i.fa.fa-calendar.fa-2x
                     span.nav-text Events
             li
-                a(ng-link='["Reports"]',ng-disabled="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu()")
+                a(ng-link='["Reports"]',ng-if="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu()")
                     i.fa.fa-area-chart.fa-2x
                     span.nav-text Reports
             li
-                a(ng-link='["Drafts"]',ng-disabled="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu()")
+                a(ng-link='["Drafts"]', ng-if="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu()")
                     i.fa.fa-pencil-square-o.fa-2x
                     span.nav-text Drafts
-            li
-                a(ng-link='["Project"]',ng-disabled="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu()")
+            li.lastItem
+                a(ng-link='["Project"]',ng-if="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu()")
                     i.fa.fa-cogs.fa-2x
                     span.nav-text Settings
+            li
+                a(ng-link="[\"CreateProject\"]",)
+                    i.fa.fa-plus-circle.fa-2x
+                    span.nav-text New Project
+            li.changeProject
+                a
+                    i.fa.fa-angle-double-right.fa-2x
+                    span.nav-text Change Project
+                .projects_change(ng-class = "{'changePos': !MenuCtrl.disabled}")
+                    .porjects_lable Your projects:
+                    .project_item(ng-repeat = "project in MenuCtrl.userProjects",ng-click = "MenuCtrl.setProject(project._id)",ng-class = "{'chosen' : MenuCtrl.projEq(project._id)}") {{project.title}}
+
+
